# CircuitPython_BMI160

./: .pylintrc  README.rst  bmi160.py  pyproject.toml
.github/workflows/: release_gh.yml  release_pypi.yml
docs/: api.rst  conf.py  examples.rst  examples.rst.license  index.rst
examples/: bmi160_acc_datarate.py  bmi160_acce_datarange.py  bmi160_gyro_datarate.py  bmi160_gyro_range.py  bmi160_gyro_simpletest.py  bmi160_simpletest.py  bmi160_temperature.py
